--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/cough"
+        android:icon="@mipmap/newicon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/asthma_round"
+        android:roundIcon="@mipmap/newicon_round"
         android:theme="@style/Theme.TestApplication"
         tools:targetApi="31">
         <activity
@@ -44,6 +44,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:theme="@style/Theme.TestApplication.NoActionBar"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
